--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube</title>
     <!-- Common -->
-    <link rel="stylesheet" href="\styles\common.css" />
+    <link rel="stylesheet" href="styles\common.css" />
     <!-- Topbar -->
-    <link rel="stylesheet" href="\styles\topbar.css" />
+    <link rel="stylesheet" href="styles\topbar.css" />
     <!-- Video -->
-    <link rel="stylesheet" href="\styles\video.css" />
+    <link rel="stylesheet" href="styles\video.css" />
     <!-- SideBar -->
-    <link rel="stylesheet" href="\styles\sidebar.css" />
+    <link rel="stylesheet" href="styles\sidebar.css" />
   </head>
   <body>
     <!-- ======================== TOPBAR ======================== -->
@@ -21,7 +21,7 @@
       <div class="top-bar-left-container">
         <!-- Hemburger menu -->
         <img
-          src="\assets\icons\hamburger-menu.svg"
+          src="assets\icons\hamburger-menu.svg"
           alt="Menu"
           class="icon-hamburger-menu"
         />
@@ -31,7 +31,7 @@
           <div class="yt-logo-item">
             <!-- youtube image -->
             <img
-              src="\assets\icons\youtube-logo.svg"
+              src="assets\icons\youtube-logo.svg"
               alt="Youtube logo"
               class="yt-logo"
             />
@@ -58,7 +58,7 @@
               <!-- button search -->
               <button class="btn-search">
                 <!-- image search -->
-                <img src="\assets\icons\search.svg" alt="" class="img-search" />
+                <img src="assets\icons\search.svg" alt="" class="img-search" />
                 <!-- Search Tooltip -->
                 <div class="tooltip">Search</div>
               </button>
@@ -70,7 +70,7 @@
             <button class="btn-voice">
               <!-- image voice -->
               <img
-                src="\assets\icons\voice-search-icon.svg"
+                src="assets\icons\voice-search-icon.svg"
                 alt=""
                 class="img-voice"
               />
@@ -88,7 +88,7 @@
           <div class="right-icon">
             <!-- upload icon -->
             <img
-              src="\assets\icons\upload.svg"
+              src="assets\icons\upload.svg"
               alt="Upload icon"
               class="icon-upload"
             />
@@ -99,7 +99,7 @@
           <div class="right-icon">
             <!-- notification icon -->
             <img
-              src="\assets\icons\notifications.svg"
+              src="assets\icons\notifications.svg"
               alt="Notifications icon"
               class="icon-notifications"
             />
@@ -110,7 +110,7 @@
           <button class="right-icon-channal">
             <!-- channel profile image -->
             <img
-              src="\assets\icons\my-channel.png"
+              src="assets\icons\my-channel.png"
               alt="My channal"
               class="my-channal"
             />
@@ -126,7 +126,7 @@
       <!-- Home item container -->
       <div class="sidebar-item-container">
         <!-- home icon -->
-        <img src="\assets\icons\home.svg" alt="" class="img-sidebar" />
+        <img src="assets\icons\home.svg" alt="" class="img-sidebar" />
         <!-- home text -->
         <div class="txt-sidebar">Home</div>
         <!-- home tooltip -->
@@ -136,7 +136,7 @@
       <!-- Explore item container -->
       <div class="sidebar-item-container">
         <!-- explore icon -->
-        <img src="\assets\icons\explore.svg" alt="" class="img-sidebar" />
+        <img src="assets\icons\explore.svg" alt="" class="img-sidebar" />
         <!-- explore text -->
         <div class="txt-sidebar">Explore</div>
         <!-- explore tooltip -->
@@ -147,7 +147,7 @@
       <div class="sidebar-item-container">
         <!-- shorts icon -->
         <img
-          src="\assets\icons\youtube-shorts.svg"
+          src="assets\icons\youtube-shorts.svg"
           alt=""
           class="img-sidebar"
         />
@@ -160,7 +160,7 @@
       <!-- Subscriptions item container -->
       <div class="sidebar-item-container">
         <!-- subscriptions icon -->
-        <img src="\assets\icons\subscriptions.svg" alt="" class="img-sidebar" />
+        <img src="assets\icons\subscriptions.svg" alt="" class="img-sidebar" />
         <!-- subscriptions text-->
         <div class="txt-sidebar">Subscriptions</div>
         <!-- subscriptions tooltip -->
@@ -170,7 +170,7 @@
       <!-- Library item container -->
       <div class="sidebar-item-container">
         <!-- library icon -->
-        <img src="\assets\icons\library.svg" alt="" class="img-sidebar" />
+        <img src="assets\icons\library.svg" alt="" class="img-sidebar" />
         <!-- library text -->
         <div class="txt-sidebar">Library</div>
         <!-- library tooltip -->
@@ -186,7 +186,7 @@
         <div class="thumbnail-container">
           <!-- thumbnail image -->
           <img
-            src="\assets\thumbnails\thumbnail-1.png"
+            src="assets\thumbnails\thumbnail-1.png"
             alt=""
             class="thumbnail"
           />
@@ -203,7 +203,7 @@
               <div class="hover-thumbnail-container">
                 <!-- video 1 -->
                 <video
-                  src="\assets\videos\video-1.mp4"
+                  src="assets\videos\video-1.mp4"
                   class="hover-thumbnail"
                   autoplay
                   muted
@@ -214,7 +214,7 @@
               <div class="hover-video-info-container">
                 <div class="profile-container">
                   <img
-                    src="\assets\channel\channel-1.jpg"
+                    src="assets\channel\channel-1.jpg"
                     alt=""
                     class="channel-profile"
                   />
@@ -228,7 +228,7 @@
                   <div class="name-container">
                     <p class="channel-name">Namanh Kapur</p>
                     <img
-                      src="\assets\icons\verified.png"
+                      src="assets\icons\verified.png"
                       alt=""
                       class="verified"
                     />
@@ -240,16 +240,16 @@
                     <p class="time">3 month ago</p>
                   </div>
                 </div>
-                <img src="\assets\icons\options.png" alt="" class="options" />
+                <img src="assets\icons\options.png" alt="" class="options" />
               </div>
 
               <div class="hover-button-container">
                 <button class="watch-later">
-                  <img src="\assets\icons\watch-later.png" alt="" />
+                  <img src="assets\icons\watch-later.png" alt="" />
                   <p>WATCH LATER</p>
                 </button>
                 <button class="add-to-queue">
-                  <img src="\assets\icons\queue.png" alt="" />
+                  <img src="assets\icons\queue.png" alt="" />
                   <p>ADD TO QUEUE</p>
                 </button>
               </div>
@@ -262,7 +262,7 @@
           <div class="profile-container">
             <!-- channel image -->
             <img
-              src="\assets\channel\channel-1.jpg"
+              src="assets\channel\channel-1.jpg"
               alt=""
               class="channel-profile"
             />
@@ -278,7 +278,7 @@
               <!-- channel name -->
               <p class="channel-name">Namanh Kapur</p>
               <!-- verified icon -->
-              <img src="\assets\icons\verified.png" alt="" class="verified" />
+              <img src="assets\icons\verified.png" alt="" class="verified" />
             </div>
 
             <!-- stats container -->
@@ -292,7 +292,7 @@
             </div>
           </div>
           <!-- options tooltip -->
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -300,7 +300,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-2.png"
+            src="assets\thumbnails\thumbnail-2.png"
             alt=""
             class="thumbnail"
           />
@@ -310,7 +310,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-2.jpg"
+              src="assets\channel\channel-2.jpg"
               alt=""
               class="channel-profile"
             />
@@ -327,7 +327,7 @@
               <p class="time">3 weeks ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -335,7 +335,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-3.png"
+            src="assets\thumbnails\thumbnail-3.png"
             alt=""
             class="thumbnail"
           />
@@ -345,7 +345,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-3.jpg"
+              src="assets\channel\channel-3.jpg"
               alt=""
               class="channel-profile"
             />
@@ -365,7 +365,7 @@
               <p class="time">1 year ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -373,7 +373,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-4.png"
+            src="assets\thumbnails\thumbnail-4.png"
             alt=""
             class="thumbnail"
           />
@@ -383,7 +383,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-4.jpg"
+              src="assets\channel\channel-4.jpg"
               alt=""
               class="channel-profile"
             />
@@ -400,7 +400,7 @@
               <p class="time">2 months ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -408,7 +408,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-5.png"
+            src="assets\thumbnails\thumbnail-5.png"
             alt=""
             class="thumbnail"
           />
@@ -418,7 +418,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-5.jpg"
+              src="assets\channel\channel-5.jpg"
               alt=""
               class="channel-profile"
             />
@@ -427,7 +427,7 @@
             <p class="description">C++ Tutorial for Beginners - Full Course</p>
             <div class="name-container">
               <p class="channel-name">freeCodeCamp.org</p>
-              <img src="\assets\icons\verified.png" alt="" class="verified" />
+              <img src="assets\icons\verified.png" alt="" class="verified" />
             </div>
 
             <div class="stat-container">
@@ -436,7 +436,7 @@
               <p class="time">3 year ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -444,7 +444,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-6.png"
+            src="assets\thumbnails\thumbnail-6.png"
             alt=""
             class="thumbnail"
           />
@@ -454,7 +454,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-6.jpg"
+              src="assets\channel\channel-6.jpg"
               alt=""
               class="channel-profile"
             />
@@ -465,7 +465,7 @@
             </p>
             <div class="name-container">
               <p class="channel-name">Programming with Mosh</p>
-              <img src="\assets\icons\verified.png" alt="" class="verified" />
+              <img src="assets\icons\verified.png" alt="" class="verified" />
             </div>
 
             <div class="stat-container">
@@ -474,7 +474,7 @@
               <p class="time">3 year ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -482,7 +482,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-7.png"
+            src="assets\thumbnails\thumbnail-7.png"
             alt=""
             class="thumbnail"
           />
@@ -492,7 +492,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-7.jpg"
+              src="assets\channel\channel-7.jpg"
               alt=""
               class="channel-profile"
             />
@@ -511,7 +511,7 @@
               <p class="time">4 months ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -519,7 +519,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-8.png"
+            src="assets\thumbnails\thumbnail-8.png"
             alt=""
             class="thumbnail"
           />
@@ -529,7 +529,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-8.jpg"
+              src="assets\channel\channel-8.jpg"
               alt=""
               class="channel-profile"
             />
@@ -549,7 +549,7 @@
               <p class="time">1 year ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -557,7 +557,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-9.png"
+            src="assets\thumbnails\thumbnail-9.png"
             alt=""
             class="thumbnail"
           />
@@ -567,7 +567,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-9.jpg"
+              src="assets\channel\channel-9.jpg"
               alt=""
               class="channel-profile"
             />
@@ -578,7 +578,7 @@
             </p>
             <div class="name-container">
               <p class="channel-name">devaslife</p>
-              <img src="\assets\icons\verified.png" alt="" class="verified" />
+              <img src="assets\icons\verified.png" alt="" class="verified" />
             </div>
 
             <div class="stat-container">
@@ -587,7 +587,7 @@
               <p class="time">6 months ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -595,7 +595,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-10.png"
+            src="assets\thumbnails\thumbnail-10.png"
             alt=""
             class="thumbnail"
           />
@@ -605,7 +605,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-10.jpg"
+              src="assets\channel\channel-10.jpg"
               alt=""
               class="channel-profile"
             />
@@ -624,7 +624,7 @@
               <p class="time">1 year ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -632,7 +632,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-11.png"
+            src="assets\thumbnails\thumbnail-11.png"
             alt=""
             class="thumbnail"
           />
@@ -642,7 +642,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-11.jpg"
+              src="assets\channel\channel-11.jpg"
               alt=""
               class="channel-profile"
             />
@@ -659,7 +659,7 @@
               <p class="time">2 days ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
 
@@ -667,7 +667,7 @@
       <div class="video-item">
         <div class="thumbnail-container">
           <img
-            src="\assets\thumbnails\thumbnail-12.png"
+            src="assets\thumbnails\thumbnail-12.png"
             alt=""
             class="thumbnail"
           />
@@ -677,7 +677,7 @@
         <div class="video-info-container">
           <div class="profile-container">
             <img
-              src="\assets\channel\channel-12.jpg"
+              src="assets\channel\channel-12.jpg"
               alt=""
               class="channel-profile"
             />
@@ -688,7 +688,7 @@
             </p>
             <div class="name-container">
               <p class="channel-name">CS50</p>
-              <img src="\assets\icons\verified.png" alt="" class="verified" />
+              <img src="assets\icons\verified.png" alt="" class="verified" />
             </div>
 
             <div class="stat-container">
@@ -697,7 +697,7 @@
               <p class="time">5 days ago</p>
             </div>
           </div>
-          <img src="\assets\icons\options.png" alt="" class="options" />
+          <img src="assets\icons\options.png" alt="" class="options" />
         </div>
       </div>
     </div>
